--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon src/server.ts",
-    "host": "cross-env HOST=192.168.1.10 PORT=3000 nodemon src/server.ts"
+    "host": "cross-env HOST=192.168.1.40 PORT=3000 nodemon src/server.ts"
   },
   "keywords": [],
   "author": "",
@@ -17,12 +17,14 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.1.0",
     "xlsx": "^0.18.5",
     "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.12.12",
     "cross-env": "^7.0.3",
     "prisma": "^5.14.0",
