--- a/.env
+++ b/.env
@@ -5,4 +5,4 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 # DATABASE_URL="postgres://pdv_dev:Aj0xvWJcGA9yHfHOl4kRfxfm4bQ6NgFq@dpg-cpaf73e3e1ms739p8ga0-a.oregon-postgres.render.com/pdv_dev"
-DATABASE_URL="postgresql://pdv_dev:oXgNw1QuVE6lDGcmXnMYJeK2r27ILF4a@dpg-crtgtqbtq21c73aodu0g-a.oregon-postgres.render.com/pdv_dev_bua9"
+DATABASE_URL="postgresql://pdv_dev:pAbYb2KelCv2AS9PgRZXZtGmToytpUe3@dpg-csl8n9bv2p9s73b4k9u0-a.oregon-postgres.render.com/pdv_dev_lcgz"
