--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
   "name": "server",
   "version": "1.0.0",
   "description": "",
-  "main": "src/index.ts",
+  "main": "src/server.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon src/server.ts",
-    "host": "cross-env HOST=192.168.1.40 PORT=3000 nodemon src/server.ts"
+    "host": "cross-env HOST=192.168.1.40 PORT=3000 nodemon src/server.ts",
+    "build": "tsc",
+    "start": "node dist/server.js"
   },
   "keywords": [],
   "author": "",
